--- a/games/runesaga.html
+++ b/games/runesaga.html
@@ -8,13 +8,53 @@
 @import url('https://fonts.googleapis.com/css2?family=Share+Tech+Mono&family=Rajdhani:wght@400;600;700&family=Orbitron:wght@700;900&display=swap');
 
 :root{
-  --bg0:#07070e;--bg1:#0c0c18;--bg2:#111120;--bg3:#161630;
-  --border:#1e1e38;--border2:#2a2a48;--border3:#3a3a5a;
-  --txt:#c8cce8;--txt2:#7880a0;--txt3:#4a5070;
-  --amber:#f0a828;--amber2:#c07810;--violet:#9050e8;--violet2:#6030b0;
-  --cyan:#30d0c0;--green:#40e078;--red:#e04040;--red2:#a02020;
-  --gold:#d4a017;--shield:#4878f0;
-  --legacy:#d4a017;--salvage:#30c0a0;
+  /* Lithic Arcanum */
+  --stone-void:#0c0c10;
+  --stone-dark:#1a1a22;
+  --stone-edge:#3a3a45;
+
+  --core-glow:#ffffff;
+  --arcane-violet:#a600ff;
+  --arcane-amber:#ff9900;
+  --arcane-cyan:#00e5ff;
+
+  --text-muted:#8a8a9a;
+  --health-red:#c92a2a;
+
+  /* Aliases to existing vars used throughout */
+  --bg0: var(--stone-void);
+  --bg1: color-mix(in oklab, var(--stone-dark) 92%, black);
+  --bg2: color-mix(in oklab, var(--stone-dark) 86%, black);
+  --bg3: color-mix(in oklab, var(--stone-dark) 78%, black);
+
+  --violet: var(--arcane-violet);
+  --violet2: color-mix(in oklab, var(--arcane-violet) 55%, #2a0a44);
+
+  --amber: var(--arcane-amber);
+  --amber2: color-mix(in oklab, var(--arcane-amber) 55%, #2a1400);
+
+  --cyan: var(--arcane-cyan);
+
+  /* text */
+  --txt: #cfcfe0;
+  --txt2: var(--text-muted);
+  --txt3: #5a5a6a;
+
+  /* borders */
+  --border: color-mix(in oklab, var(--stone-edge) 70%, black);
+  --border2: color-mix(in oklab, var(--stone-edge) 55%, black);
+  --border3: color-mix(in oklab, var(--stone-edge) 40%, black);
+
+  /* reds */
+  --red: var(--health-red);
+  --red2: color-mix(in oklab, var(--health-red) 60%, #ff6b6b);
+
+  /* existing aliases retained */
+  --green:#40e078;
+  --gold:#d4a017;
+  --shield:#4878f0;
+  --legacy:#d4a017;
+  --salvage:#30c0a0;
 
   /* Responsive chrome sizing (JS keeps these in sync) */
   --header-h:44px;
@@ -22,14 +62,38 @@
 }
 
 *{box-sizing:border-box;margin:0;padding:0;}
-html,body{height:100%;overflow:hidden;}
-body{
-  background:var(--bg0);color:var(--txt);
-  font-family:'Rajdhani',sans-serif;font-size:14px;
+html,body{
+  background-color: var(--stone-void);
   background-image:
-    radial-gradient(ellipse at 20% 50%,rgba(80,30,160,.08) 0%,transparent 50%),
-    radial-gradient(ellipse at 80% 20%,rgba(30,80,160,.06) 0%,transparent 40%);
+    radial-gradient(circle at 50% 30%, var(--bg1) 0%, var(--stone-void) 72%),
+    radial-gradient(circle at 18% 78%, rgba(166,0,255,.08) 0%, transparent 55%),
+    radial-gradient(circle at 82% 76%, rgba(255,153,0,.06) 0%, transparent 60%),
+    repeating-linear-gradient(45deg, rgba(0,0,0,0.12) 0 2px, transparent 2px 5px);
+  color: var(--txt);
+  font-family:'Rajdhani',sans-serif;font-size:14px;
 }
+
+body::after{
+  content:"";
+  position:fixed; inset:0;
+  pointer-events:none;
+  opacity: var(--embers-opacity, .12);
+  background:
+    radial-gradient(circle at 10% 30%, rgba(255,153,0,.85) 0 2px, transparent 3px),
+    radial-gradient(circle at 18% 70%, rgba(255,153,0,.70) 0 1.5px, transparent 3px),
+    radial-gradient(circle at 35% 55%, rgba(255,153,0,.65) 0 1.7px, transparent 3px),
+    radial-gradient(circle at 55% 80%, rgba(255,153,0,.70) 0 2px, transparent 3px),
+    radial-gradient(circle at 80% 40%, rgba(255,153,0,.65) 0 2px, transparent 3px),
+    radial-gradient(circle at 66% 18%, rgba(255,153,0,.60) 0 1.6px, transparent 3px);
+  animation: emberDrift 14s linear infinite;
+  mix-blend-mode: screen;
+  filter: blur(.1px);
+}
+@keyframes emberDrift{
+  from{ transform:translateY(22px) translateX(-10px); }
+  to{ transform:translateY(-34px) translateX(22px); }
+}
+body.embers-off::after{ opacity:0 !important; }
 
 #game{display:grid;grid-template-rows:44px 1fr 44px;height:100dvh;}
 #header{
@@ -48,8 +112,54 @@ body{
 }
 
 .panel{
-  background:var(--bg1);overflow-y:auto;padding:10px 12px;border-right:1px solid var(--border);
+  position:relative;
+  background:
+    linear-gradient(to bottom right, rgba(255,255,255,.05), rgba(0,0,0,.16)),
+    linear-gradient(to bottom, var(--bg2), var(--stone-dark));
+  border: 4px solid var(--stone-void);
+  border-radius: 6px;
+  padding: 16px;
+  box-shadow:
+    inset 0 0 24px rgba(0,0,0,.65),
+    0 18px 28px rgba(0,0,0,.55);
+  overflow:hidden;
   -webkit-overflow-scrolling:touch;
+}
+.panel::after{
+  content:"";
+  position:absolute;
+  inset:3px;
+  border-radius: 4px;
+  pointer-events:none;
+  box-shadow:
+    inset 1px 1px 0 rgba(255,255,255,.05),
+    inset -1px -1px 0 rgba(0,0,0,.35);
+  opacity:.9;
+}
+.panel::before{
+  content:"";
+  position:absolute;
+  inset:-10px;
+  pointer-events:none;
+  opacity:.42;
+  background:
+    radial-gradient(10px 14px at 12px 18px, rgba(0,0,0,.55) 40%, transparent 42%),
+    radial-gradient(14px 10px at calc(100% - 18px) 22px, rgba(0,0,0,.55) 40%, transparent 42%),
+    radial-gradient(12px 12px at 18px calc(100% - 16px), rgba(0,0,0,.55) 40%, transparent 42%),
+    radial-gradient(10px 14px at calc(100% - 14px) calc(100% - 18px), rgba(0,0,0,.55) 40%, transparent 42%),
+    repeating-linear-gradient(45deg, rgba(255,255,255,.06) 0 2px, rgba(0,0,0,.10) 2px 4px);
+  mix-blend-mode: overlay;
+  filter: blur(.15px);
+}
+@supports (clip-path: polygon(0 0)){
+  body[data-edge="ragged"] .panel{
+    clip-path: polygon(
+      0% 2%, 6% 0%, 20% 1%, 36% 0%, 55% 1%, 72% 0%, 92% 1%, 100% 4%,
+      99% 18%, 100% 35%, 99% 52%, 100% 70%, 98% 86%, 100% 100%,
+      80% 99%, 64% 100%, 46% 99%, 28% 100%, 12% 99%, 0% 100%,
+      1% 84%, 0% 66%, 1% 48%, 0% 30%, 1% 14%
+    );
+  }
 }
 #right-panel{border-right:none;border-left:1px solid var(--border);}
 #center-panel{display:flex;flex-direction:column;overflow:hidden;border:none;padding:0;}
@@ -76,8 +186,26 @@ body{
 .logo{
   font-family:'Orbitron',sans-serif;font-size:12px;font-weight:900;
   color:var(--violet);letter-spacing:2px;
-  text-shadow:0 0 12px rgba(144,80,232,.5);
 }
+.rune-glow-violet{
+  color: var(--core-glow);
+  text-shadow:
+    0 0 5px var(--core-glow),
+    0 0 15px rgba(166,0,255,.9),
+    0 0 32px rgba(166,0,255,.65);
+}
+.rune-glow-amber{
+  color: var(--core-glow);
+  text-shadow:
+    0 0 5px var(--core-glow),
+    0 0 15px rgba(255,153,0,.9),
+    0 0 32px rgba(255,153,0,.65);
+}
+@keyframes runeBreath{
+  0%,100%{ opacity:.55; transform:scale(1); }
+  50%{ opacity:.9; transform:scale(1.012); }
+}
+.rune-breath{ animation: runeBreath 8s ease-in-out infinite; }
 .sec-title{
   font-size:10px;font-weight:700;letter-spacing:2px;text-transform:uppercase;
   color:var(--txt3);border-bottom:1px solid var(--border);
@@ -95,13 +223,60 @@ body{
 
 /* Bars */
 .bar-wrap{margin:5px 0 2px;}
-.bar{height:11px;background:var(--bg3);border-radius:2px;overflow:visible;position:relative;border:1px solid var(--border);}
-.bar-fill{height:100%;border-radius:1px;transition:width .2s;}
-.bar-hp .bar-fill{background:linear-gradient(90deg,#1a8040,var(--green));}
+.bar{
+  position:relative;
+  background: var(--stone-void);
+  border:2px solid color-mix(in oklab, var(--stone-dark) 90%, black);
+  box-shadow: inset 0 2px 6px rgba(0,0,0,.85);
+  border-radius: 6px;
+  overflow:hidden;
+  height:11px;
+}
+.bar .bar-fill{
+  height:100%;
+  border-radius:1px;
+  transition:width .2s;
+  background-image: linear-gradient(to right, rgba(166,0,255,.95), var(--core-glow));
+  box-shadow: 0 0 16px rgba(166,0,255,.55);
+  filter:saturate(1.2);
+}
+#hero-hp-bar .bar-fill, .bar-hp .bar-fill{
+  background-image: linear-gradient(to right, var(--health-red), #ff6b6b);
+  box-shadow: 0 0 16px rgba(201,42,42,.55);
+}
 .bar-shield-ovl{height:100%;position:absolute;top:0;background:rgba(72,120,240,.6);border-radius:1px;border-right:2px solid var(--shield);transition:all .2s;}
 .bar-xp{height:3px;background:var(--bg3);border-radius:1px;margin-top:2px;}
 .bar-xp-fill{height:100%;background:linear-gradient(90deg,var(--violet2),var(--violet));border-radius:1px;transition:width .4s;}
 .bar-txt{font-size:10px;color:var(--txt3);text-align:center;margin-top:1px;font-family:'Share Tech Mono',monospace;}
+
+@keyframes hpShake{
+  0%{transform:translateX(0)}
+  20%{transform:translateX(-3px)}
+  40%{transform:translateX(3px)}
+  60%{transform:translateX(-2px)}
+  80%{transform:translateX(2px)}
+  100%{transform:translateX(0)}
+}
+@keyframes critFlash{
+  0%{filter:brightness(1)}
+  35%{filter:brightness(1.85)}
+  100%{filter:brightness(1)}
+}
+.hp-crit{ animation: hpShake .22s ease-out, critFlash .35s ease-out; }
+
+@keyframes boomRing{
+  from{ opacity:.65; transform:scale(.7); }
+  to{ opacity:0; transform:scale(1.6); }
+}
+.bar-boom::after{
+  content:"";
+  position:absolute; inset:-6px;
+  border:2px solid rgba(255,255,255,.30);
+  box-shadow:0 0 18px rgba(255,153,0,.35);
+  border-radius: 8px;
+  animation: boomRing .35s ease-out;
+  pointer-events:none;
+}
 
 /* Status Badges */
 .sbadge{
@@ -143,7 +318,8 @@ body{
 
 /* Boon Cards */
 .boon-card{
-  background:var(--bg2);border:1px solid var(--border2);border-radius:5px;padding:10px;
+  background:linear-gradient(to bottom, var(--bg2), var(--stone-dark));border:1px solid var(--border2);border-radius:5px;padding:10px;
+  box-shadow:inset 0 1px 6px rgba(0,0,0,.35);
   cursor:pointer;transition:transform .15s,border-color .15s,box-shadow .15s;position:relative;
 }
 .boon-card:hover{transform:translateY(-3px);}
@@ -171,7 +347,8 @@ body{
 
 /* Enemy Cards */
 .enemy-card{
-  background:var(--bg2);border:1px solid var(--border);border-radius:5px;padding:9px 11px;margin:5px 0;
+  background:linear-gradient(to bottom, var(--bg2), var(--stone-dark));border:1px solid var(--border);border-radius:5px;padding:9px 11px;margin:5px 0;
+  box-shadow:inset 0 1px 6px rgba(0,0,0,.35);
   display:flex;align-items:flex-start;gap:10px;
 }
 .enemy-card.ec-elite{border-color:var(--amber2);background:#141008;}
@@ -190,7 +367,7 @@ body{
 
 /* Wave trait cards */
 .trait-card{
-  background:var(--bg2);border:1px solid #1a2a3a;border-left:3px solid var(--cyan);
+  background:linear-gradient(to bottom, var(--bg2), var(--stone-dark));border:1px solid #1a2a3a;border-left:3px solid var(--cyan);
   border-radius:4px;padding:7px 10px;margin:4px 0;display:flex;gap:8px;
 }
 .ticon{font-size:18px;flex-shrink:0;line-height:1;}
@@ -199,7 +376,7 @@ body{
 
 /* Shop */
 .shop-btn{
-  background:var(--bg2);border:1px solid var(--border2);border-radius:4px;padding:7px 8px;cursor:pointer;text-align:center;
+  background:linear-gradient(to bottom, var(--bg2), var(--stone-dark));border:1px solid var(--border2);border-radius:4px;padding:7px 8px;cursor:pointer;text-align:center;
   transition:all .12s;display:flex;flex-direction:column;gap:2px;
 }
 .shop-btn:hover:not(.sb-disabled){border-color:var(--amber);background:#1a1508;}
@@ -210,22 +387,68 @@ body{
 
 /* Buttons */
 .btn{
-  padding:7px 16px;border:none;border-radius:3px;cursor:pointer;
-  font-family:'Rajdhani',sans-serif;font-size:13px;font-weight:700;letter-spacing:.5px;
-  transition:all .12s;
+  appearance:none;
+  border:2px solid var(--stone-edge);
+  background: linear-gradient(to bottom, var(--bg2), var(--stone-dark));
+  color: var(--txt2);
+  font-family: 'Orbitron', sans-serif;
+  letter-spacing: 1px;
+  text-transform: uppercase;
+  font-size: 12px;
+  padding: 10px 12px;
+  border-radius: 6px;
+  cursor:pointer;
+  transform: translateY(0);
+  box-shadow:
+    0 4px 0 var(--stone-void),
+    0 10px 18px rgba(0,0,0,.45);
+  transition: transform .08s ease, box-shadow .08s ease, border-color .12s ease, color .12s ease, text-shadow .12s ease;
+  user-select:none;
 }
-.btn:hover{transform:translateY(-1px);}
-.btn-primary{background:linear-gradient(135deg,var(--violet2),var(--violet));color:#fff;box-shadow:0 2px 12px rgba(144,80,232,.3);}
-.btn-primary:hover{box-shadow:0 4px 20px rgba(144,80,232,.5);}
-.btn-amber{background:linear-gradient(135deg,var(--amber2),var(--amber));color:#000;}
-.btn-amber:hover{box-shadow:0 4px 16px rgba(240,168,40,.4);}
-.btn-danger{background:linear-gradient(135deg,#6a1818,var(--red2));color:#fff;}
-.btn-green{background:linear-gradient(135deg,#1a4a28,#2a7a40);color:#fff;}
-.btn-gold{background:linear-gradient(135deg,#7a4a00,var(--gold));color:#000;}
-.btn-gold:hover{box-shadow:0 4px 16px rgba(212,160,23,.4);}
-.btn-salvage{background:linear-gradient(135deg,#0a3a30,#1a6050);color:var(--salvage);border:1px solid var(--salvage);}
+.btn:hover{
+  color: var(--core-glow);
+  border-color: rgba(166,0,255,.95);
+  text-shadow: 0 0 10px rgba(166,0,255,.85);
+  box-shadow:
+    0 4px 0 var(--stone-void),
+    0 0 22px rgba(166,0,255,.45),
+    0 10px 18px rgba(0,0,0,.45);
+}
+.btn:active{
+  transform: translateY(3px);
+  box-shadow:
+    0 1px 0 var(--stone-void),
+    inset 0 2px 6px rgba(0,0,0,.65);
+}
+.btn-primary{background:linear-gradient(to bottom, var(--bg2), var(--stone-dark));color:var(--txt);}
+.btn-amber{
+  border-color: rgba(255,153,0,.9);
+}
+.btn-amber:hover{
+  border-color: rgba(255,153,0,1);
+  text-shadow: 0 0 12px rgba(255,153,0,.9);
+  box-shadow:
+    0 4px 0 var(--stone-void),
+    0 0 26px rgba(255,153,0,.45),
+    0 10px 18px rgba(0,0,0,.45);
+}
+.btn-danger{
+  border-color: color-mix(in oklab, var(--health-red) 75%, black);
+}
+.btn-danger:hover{
+  border-color: var(--health-red);
+  text-shadow: 0 0 10px rgba(201,42,42,.65);
+  box-shadow:
+    0 4px 0 var(--stone-void),
+    0 0 22px rgba(201,42,42,.35),
+    0 10px 18px rgba(0,0,0,.45);
+}
+.btn-green{border-color:rgba(64,224,120,.65);}
+.btn-gold{border-color:rgba(255,153,0,.9);}
+.btn-salvage{border-color:var(--salvage);color:var(--salvage);}
 .btn-sm{padding:4px 10px;font-size:11px;}
 .btn-ghost{background:var(--bg2);border:1px solid var(--border2);color:var(--txt2);}
+
 
 /* Log colors */
 .lhit{color:var(--txt);}
@@ -460,7 +683,7 @@ body{
 
 /* ── TACTICS (pre-wave prep; cost paid when you start the trial) ── */
 .tactic-grid{display:grid;grid-template-columns:repeat(auto-fit,minmax(170px,1fr));gap:8px;}
-.tactic-card{background:var(--bg2);border:1px solid var(--border2);border-radius:6px;padding:10px;cursor:pointer;transition:transform .12s,border-color .12s,box-shadow .12s;position:relative;}
+.tactic-card{background:linear-gradient(to bottom, var(--bg2), var(--stone-dark));border:1px solid var(--border2);border-radius:6px;padding:10px;cursor:pointer;transition:transform .12s,border-color .12s,box-shadow .12s;position:relative;}
 .tactic-card:hover{transform:translateY(-2px);border-color:var(--amber);box-shadow:0 6px 18px rgba(0,0,0,.25);}
 .tactic-card.sel{border-color:rgba(212,160,23,.7);box-shadow:0 0 14px rgba(212,160,23,.22);}
 .tactic-card.disabled{opacity:.45;cursor:not-allowed;transform:none;box-shadow:none;}
@@ -484,6 +707,11 @@ body{
 .aspect-bar{flex:1;height:6px;background:var(--bg3);border:1px solid var(--border);border-radius:6px;overflow:hidden;}
 .aspect-fill{height:100%;}
 
+
+@media (prefers-reduced-motion: reduce){
+  *{ animation:none !important; transition:none !important; }
+  body::after{ display:none; }
+}
 </style>
 </head>
 <body>
@@ -491,7 +719,7 @@ body{
 <!-- ─── RUN SCREEN ──────────────────────────────────────────── -->
 <div id="game">
   <div id="header">
-    <span class="logo">ᚠ RUNESAGA</span>
+    <span class="logo rune-glow-violet rune-breath">ᚠ RUNESAGA</span>
     <div style="width:1px;height:20px;background:var(--border2)"></div>
     <span class="wave-num" id="hdr-wave">Trial 1/12</span>
     <span style="font-size:11px;color:var(--txt3)" id="hdr-lvl">Lv.1</span>
@@ -2493,6 +2721,9 @@ function doEnemyAtk(enemy){
   if(crit)addLog(`  💥 ${enemy.displayName||enemy.name} CRITS! ${actual}`,'lcrit');
   else addLog(`  👊 ${enemy.displayName||enemy.name} hits ${actual}`,'lhit');
 
+  if(crit) fxHpImpact({crit:true});
+  else if(actual >= Math.floor(G.hero.maxHP * 0.18)) fxHpImpact({big:true});
+
   if(enemy.lifesteal>0)enemy.hp=Math.min(enemy.maxHP,enemy.hp+Math.floor(actual*enemy.lifesteal));
 
   if(enemy.rootTouched&&!enemy.dead){
@@ -2996,7 +3227,7 @@ function renderHero(){
     <div style="display:flex;justify-content:space-between;font-size:11px;color:var(--txt3);margin-bottom:3px">
       <span>HP</span><span style="font-family:'Share Tech Mono',monospace">${h.hp}/${h.maxHP}${sh?' 🛡'+sh.value:''}</span>
     </div>
-    <div class="bar bar-hp"><div class="bar-fill" style="width:${hpPct}%"></div>${sh?`<div class="bar-shield-ovl" style="left:${hpPct}%;width:${shPct}%"></div>`:''}</div>
+    <div id="hero-hp-bar" class="bar bar-hp"><div class="bar-fill" style="width:${hpPct}%"></div>${sh?`<div class="bar-shield-ovl" style="left:${hpPct}%;width:${shPct}%"></div>`:''}</div>
     <div class="bar bar-xp" style="margin-top:3px"><div class="bar-xp-fill" style="width:${(G.xp/G.xpNeeded*100)}%"></div></div>
     <div class="bar-txt">${h.hp}/${h.maxHP} HP · Lv.${G.level}</div>
   </div>
@@ -3353,7 +3584,7 @@ function renderFooter(){
   if(!G)return;
   const ftr=document.getElementById('ftr-btns'),info=document.getElementById('ftr-info');
   if(G.phase==='WAVE_PREVIEW'){
-    ftr.innerHTML=`<button class="btn btn-primary" onclick="startBattle()">⚔ Begin Trial ${G.wave}</button>`;
+    ftr.innerHTML=`<button class="btn btn-amber rune-glow-amber" onclick="startBattle()">⚔ Begin Trial ${G.wave}</button>`;
     info.textContent=`ᛋ ${G.gold} ${LEX.sagaMarks} · ${G.wave<G.maxWaves?'Next: Trial '+(G.wave+1):'Final Trial!'}`;
   }else if(G.phase==='BATTLE'){
     ftr.innerHTML=`<span style="color:var(--txt3);font-size:12px;animation:pulse2 1.2s infinite">⚔ Battle in progress...</span>`;
@@ -4230,12 +4461,26 @@ function confirmReset(){
 }
 
 // ═══ LOG ═══
-function addLog(msg,cls){
-  const log=document.getElementById('combat-log');
-  const el=document.createElement('div');el.className=cls||'lhit';el.innerHTML=msg;
-  log.appendChild(el);
+function fxHpImpact({crit=false,big=false}={}){
+  const el = document.getElementById('hero-hp-bar');
+  if(!el) return;
+  el.classList.remove('hp-crit','bar-boom');
+  void el.offsetWidth;
+  if(crit || big) el.classList.add('hp-crit','bar-boom');
+}
+
+function addLog(msg,cls=""){
+  const log = document.getElementById("combat-log");
+  if(!log) return;
+  const nearBottom = (log.scrollHeight - log.scrollTop - log.clientHeight) < 60;
+
+  const div = document.createElement("div");
+  div.className = cls || 'lhit';
+  div.textContent = msg;
+  log.appendChild(div);
+
   while(log.children.length>400)log.removeChild(log.firstChild);
-  log.scrollTop=log.scrollHeight;
+  if(nearBottom) log.scrollTop = log.scrollHeight;
 }
 function clearLog(){document.getElementById('combat-log').innerHTML='';}
 
